# Tracker

./: .gitignore  ClipboardTracker.py  main.py  pyproject.toml  requirements.txt
configs/: hotkeys.py  languages_mapping.py
src/: ClipboardTracker.py  Login.py  TrafficTracer.py  WebSocketClient.py  main.py
src/configs/: file_writers.py  hotkeys.py  languages_mapping.py  logger.py
src/loggers/: KeyboardLogger.py  Logger.py  LoggerEnum.py  LoggerHandler.py  MouseLogger.py
src/websocket/: WebsocketClient.py  WebsocketHandler.py
